Fixed canvas sizing bug. Canvas no longer stretches and blurs the image.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,4 @@
-html, body,
-#game-canvas {
+html, body {
   padding: 0;
   margin: 0;
   width: 100%;
